Fix horizontal overflow CSS issue with images inside tables inside item HTML content

--- a/iOS/itemstyle.css
+++ b/iOS/itemstyle.css
@@ -68,7 +68,6 @@ a {
 
 blockquote {
 	padding: 0 0 0 25px;
-	border-left: 1px solid #E0E0E0;
 	margin: 0 0 10px 0;
 	}
 
@@ -81,7 +80,11 @@ blockquote {
 }
 
 table .bigimage {
-    margin-right: 0 !important;
+    margin: 0 !important;
+    clear: auto !important;
+    overflow: auto !important;
+    float: none !important;
+    max-width: 150px !important;
 }
 
 img {
@@ -98,7 +101,11 @@ img {
 
 
 #content {
-	padding: 10px;
+	margin: 10px;
+}
+
+#content * {
+    max-width: 300px;
 }
 
 p.chronodata {
